# nodaysidle-sunder

./: .gitignore  AGENT.md  ARD.md  PRD.md  README.md  TASKS.md  TRD.md  USAGE.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/services/: embedding.rs  file_watcher.rs  graph.rs  link.rs  mod.rs  note.rs  search.rs  settings.rs
src/components/: AppShell.tsx  EditorView.tsx  GraphCanvas.tsx  LatentLinksPanel.tsx  SettingsView.tsx  Sidebar.tsx
src/hooks/: useAutoSave.ts  useGraphData.ts  useLatentLinks.ts  useNote.ts  useNoteList.ts  useSearch.ts
src/types/: index.ts
